<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.inicio.RegistroUnoFragment"
    android:background="@drawable/img_back_dos">

    <EditText
        android:id="@+id/et_Nombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/bg_round_border_reg"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--EditText
        android:id="@+id/edt_apellido"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_border_reg"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Nombre" /-->

    <EditText
        android:id="@+id/et_Correo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_border_reg"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Nombre" />

    <EditText
        android:id="@+id/et_Contra"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_border_reg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Correo" />

    <EditText
        android:id="@+id/et_ConfirContra"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_border_reg"
        android:ems="10"
        android:hint="@string/confirpass"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Contra" />

    <RadioButton
        android:id="@+id/rb_Acepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/colorWhite"
        android:text="@string/acepto"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ConfirContra" />

    <!--Button
        android:id="@+id/btn_sig_reg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorWhite"
        android:drawableEnd="@drawable/ic_sig_reg"
        android:drawablePadding="16dp"
        android:onClick="siguiente"
        android:padding="14dp"
        android:text="@string/siguiente"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_Acepto" /-->


    <Button
        android:id="@+id/btn_CrearCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:drawablePadding="16dp"
        android:padding="14dp"
        android:text="@string/crear"
        android:paddingEnd="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_Acepto"
        android:drawableLeft="@drawable/ic_sig_reg"/>





</androidx.constraintlayout.widget.ConstraintLayout>