<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_back_uno"
    tools:context=".view.inicio.LoginFragment">

    <ImageView
        android:id="@+id/img_land"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_landing" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="513dp"
        android:layout_height="492dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="470dp"
        android:rotation="280"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_iconoapp" />

    <EditText
        android:id="@+id/et_Correo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_border"
        android:drawableStart="@drawable/ic_correo"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/correo"
        android:text="avtestnp@gmail.com"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_land" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_border"
        android:drawableStart="@drawable/ic_pass_login"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:text="1234567890"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Correo" />


    <Button
        android:id="@+id/btn_Ingresar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_round_btn_login"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <!--Button
        android:id="@+id/btn_Registrar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_btn_login"
        android:drawablePadding="16dp"
        android:padding="14dp"
        android:paddingEnd="16dp"
        android:text="@string/registro"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_Ingresar"
        app:layout_constraintTop_toTopOf="@+id/btn_Ingresar"
        app:layout_constraintVertical_bias="1.0" /-->

    <TextView
        android:id="@+id/tx_Olvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/olvido"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Ingresar" />

    <TextView
        android:id="@+id/tx_Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registro"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_Olvido" />


</androidx.constraintlayout.widget.ConstraintLayout>